--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@eslint/js": "^9.3.0",
         "@types/jest": "^29.5.12",
+        "@typescript-eslint/eslint-plugin": "^7.9.0",
+        "@typescript-eslint/parser": "^7.9.0",
         "dotenv": "^16.4.5",
+        "eslint": "9.x",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
         "jest": "^29.7.0",
         "jest-mock-extended": "^3.0.7",
+        "mockdate": "^3.0.5",
         "ts-jest": "^29.1.2",
         "typescript": "^5.4.5"
     },
