--- a/package.json
+++ b/package.json
@@ -1,30 +1,61 @@
 {
-    "name": "barberix",
+    "name": "sistema-de-agendamentos-nunes-petcare",
     "version": "1.0.0",
-    "description": "Sistema completo de agendamentos online do bootcamp CrazyStack",
-    "main": "index.js",
-    "repository": "https://github.com/gumiranda/CrazyStackNodeJs.git",
-    "author": "imartytk@Hotmail.com",
-    "scripts": {
-        "test": "jest --passWithNoTests --silent -noStackTrace --runInBand"
-    },
+    "main": "dist/index.js",
     "license": "MIT",
+    "scripts": {
+        "format": "prettier --write \"src/**/**/**/*.ts\"",
+        "test:db": "jest --passWithNoTests --silent --noStackTrace --runInBand --forceExit -c jest-db-config.js",
+        "test:all": "jest --passWithNoTests --silent --noStackTrace --runInBand --forceExit  -c jest-all-config.js",
+        "test:t": "jest --passWithNoTests --silent --noStackTrace --runInBand --forceExit  -c jest-test-config.js",
+        "test": "jest --passWithNoTests --silent --forceExit --detectOpenHandles --noStackTrace --runInBand",
+        "test:v": "jest --passWithNoTests --forceExit --noStackTrace --runInBand",
+        "test:coverage": "jest --runInBand",
+        "clean": "rimraf dist",
+        "build": "npm run clean && tsc",
+        "start": "node -r dotenv/config dist",
+        "generate": "yarn plop --plopfile ./generators/plopfile.js"
+    },
     "devDependencies": {
-        "@eslint/js": "^9.3.0",
-        "@types/jest": "^29.5.12",
-        "@typescript-eslint/eslint-plugin": "^7.9.0",
-        "@typescript-eslint/parser": "^7.9.0",
-        "dotenv": "^16.4.5",
-        "eslint": "9.x",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
-        "jest": "^29.7.0",
-        "jest-mock-extended": "^3.0.7",
+        "@shelf/jest-mongodb": "^4.1.4",
+        "@types/bcrypt": "^5.0.0",
+        "@types/jest": "^29.2.5",
+        "@types/jsonwebtoken": "^9.0.0",
+        "@types/module-alias": "^2.0.1",
+        "@typescript-eslint/eslint-plugin": "^5.48.0",
+        "@typescript-eslint/parser": "^5.48.0",
+        "dotenv": "^16.0.3",
+        "eslint": "^8.31.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "jest": "^29.3.1",
+        "jest-environment-node": "^29.3.1",
+        "jest-mock-extended": "^3.0.1",
         "mockdate": "^3.0.5",
-        "ts-jest": "^29.1.2",
-        "typescript": "^5.4.5"
+        "mongodb-memory-server": "^8.10.2",
+        "mongodb-memory-server-core": "^8.10.2",
+        "plop": "^3.1.1",
+        "prettier": "^2.8.1",
+        "ts-jest": "^29.0.3",
+        "typescript": "^4.9.4"
     },
     "_moduleAliases": {
         "@": "dist"
+    },
+    "dependencies": {
+        "@fastify/cors": "^8.3.0",
+        "@fastify/helmet": "^10.1.0",
+        "@fastify/mongodb": "^6.2.0",
+        "@fastify/rate-limit": "^7.6.0",
+        "@fastify/request-context": "^4.2.0",
+        "@fastify/under-pressure": "^8.2.0",
+        "bcrypt": "^5.1.0",
+        "date-fns": "^2.29.3",
+        "date-fns-tz": "^1.3.7",
+        "deep-email-validator": "^0.1.21",
+        "fastify": "^4.11.0",
+        "jsonwebtoken": "^9.0.0",
+        "module-alias": "^2.2.2",
+        "mongodb": "^4.13.0"
     }
 }
